<resources>
    <string name="app_name">绿道骑行</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mineweeper">扫雷</string>
    <string name="string_input">请输入手机号码</string>
    <string name="string_get_code">获取验证码</string>
    <string name="string_input_code">请输入4位验证码</string>
    <string name="string_register">注册</string>
    <string name="string_welcome">欢迎</string>
    <string name="string_register_by_phone">通过手机号注册</string>
    <string name="string_finish_info">请填写完整信息</string>
    <string name="string_hint_user_name">请输入用户名</string>
    <string name="string_hint_admin_or_phone">请输入管理员或手机号</string>
    <string name="string_hint_password">请输入密码</string>
    <string name="string_hint_confirm_password">确认密码</string>
    <string name="string_login">登录</string>
    <string name="string_loging">登录中</string>
    <string name="string_log_success">登录成功</string>
    <string name="string_phone_login">手机登录</string>
    <string name="string_forget_password">忘记密码</string>
    <string name="string_user_login">账号登录</string>
    <string name="string_admin_login">管理员登录</string>
    <string name="string_to_start">首页</string>
    <string name="string_network_error">网络错误</string>
    <string name="string_show_status">状态：</string>
    <string name="string_status_unused">未使用</string>
    <string name="string_status_fix">维修中</string>
    <string name="string_status_using">使用中</string>
    <string name="string_show_in_map">地图定位</string>
    <string name="string_show_mileage">里程：</string>
    <string name="string_bike_type">车辆类型：10元/分钟</string>
    <string name="string_mileage_unit">公里</string>
    <string name="string_show_bike_id">车辆编号：</string>
    <string name="string_version_code">1</string>
    <string name="string_version_name">1.0.0</string>
    <string name="string_id">ID12345678</string>
    <string name="string_show_admin_name">管理员：</string>
    <string name="string_show_user_id">用户ID：</string>
    <string name="string_number">123456789</string>
    <string name="string_show_phone">手机号：</string>
    <string name="string_call">拨打电话</string>
    <string name="string_show_order_id">记录编号：</string>
    <string name="string_show_msg_id">留言编号：</string>
    <string name="string_charge">元</string>
    <string name="string_show_charge">计费：</string>
    <string name="string_score">分</string>
    <string name="string_show_score">积分：</string>
    <string name="string_duration">分钟</string>
    <string name="string_show_duration">计时：</string>
    <string name="string_show_create_time">创建时间：</string>
    <string name="string_create_time">2019-01-01 12:00:00</string>
    <string name="string_show_latitude">纬度：</string>
    <string name="string_latlng">123.456789</string>
    <string name="string_show_longitude">经度：</string>
    <string name="string_show_radius">半径：</string>
    <string name="string_radius_unit">米</string>
    <string name="string_add">添加</string>
    <string name="string_forward">前往</string>
    <string name="string_stop_bike">结束骑行</string>
    <string name="string_hint_advice">输入您的反馈或建议</string>
    <string name="string_hint_help">输入您的任何疑问或请求帮助</string>
    <string name="string_send">发送</string>
    <string name="string_now_service">当前服务器：</string>
</resources>
