<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tv_show_order_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/string_show_order_id"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_id"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_order_Id"
        app:layout_constraintStart_toEndOf="@+id/tv_show_order_Id"
        app:layout_constraintTop_toTopOf="@+id/tv_show_order_Id"/>

    <TextView
        android:id="@+id/tv_show_bike_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_show_bike_id"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_order_Id"
        app:layout_constraintStart_toEndOf="@+id/tv_order_id"
        app:layout_constraintTop_toTopOf="@+id/tv_show_order_Id"/>

    <TextView
        android:id="@+id/tv_bike_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_id"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_bike_Id"
        app:layout_constraintStart_toEndOf="@+id/tv_show_bike_Id"
        app:layout_constraintTop_toTopOf="@+id/tv_show_bike_Id"/>

    <TextView
        android:id="@+id/tv_show_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/string_show_create_time"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_order_Id"/>

    <TextView
        android:id="@+id/tv_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_create_time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_create_time"
        app:layout_constraintStart_toEndOf="@+id/tv_show_create_time"
        app:layout_constraintTop_toTopOf="@+id/tv_show_create_time"/>

    <TextView
        android:id="@+id/tv_show_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/string_show_duration"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_create_time"/>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_duration"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_duration"
        app:layout_constraintStart_toEndOf="@+id/tv_show_duration"
        app:layout_constraintTop_toTopOf="@+id/tv_show_duration"/>

    <TextView
        android:id="@+id/tv_show_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_show_charge"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_duration"
        app:layout_constraintStart_toEndOf="@+id/tv_duration"
        app:layout_constraintTop_toTopOf="@+id/tv_show_duration"/>

    <TextView
        android:id="@+id/tv_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_charge"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_charge"
        app:layout_constraintStart_toEndOf="@+id/tv_show_charge"
        app:layout_constraintTop_toTopOf="@+id/tv_show_charge"/>

    <TextView
        android:id="@+id/tv_show_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_show_score"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_duration"
        app:layout_constraintStart_toEndOf="@+id/tv_charge"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_score"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_score"
        app:layout_constraintStart_toEndOf="@+id/tv_show_score"
        app:layout_constraintTop_toTopOf="@+id/tv_show_score"/>

    <TextView
        android:id="@+id/tv_show_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/string_show_mileage"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_duration"/>

    <TextView
        android:id="@+id/tv_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_mileage_unit"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_mileage"
        app:layout_constraintStart_toEndOf="@+id/tv_show_mileage"
        app:layout_constraintTop_toTopOf="@+id/tv_show_mileage"/>

    <TextView
        android:id="@+id/tv_bike_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_bike_type"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_mileage"
        app:layout_constraintStart_toEndOf="@+id/tv_mileage"
        app:layout_constraintTop_toTopOf="@+id/tv_show_mileage"/>

</android.support.constraint.ConstraintLayout>