<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/tv_show_bike_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_show_bike_id"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_bike_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        android:text="@string/string_id"
        app:layout_constraintStart_toEndOf="@+id/tv_show_bike_Id"
        app:layout_constraintTop_toTopOf="@+id/tv_show_bike_Id"/>

    <TextView
        android:id="@+id/tv_show_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_show_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_status_unused"
        app:layout_constraintStart_toEndOf="@+id/tv_show_status"
        app:layout_constraintTop_toTopOf="@+id/tv_show_status"/>

    <TextView
        android:id="@+id/tv_show_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/string_show_mileage"
        app:layout_constraintStart_toEndOf="@+id/tv_status"
        app:layout_constraintTop_toTopOf="@+id/tv_show_status"/>

    <TextView
        android:id="@+id/tv_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_mileage_unit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_mileage"
        app:layout_constraintStart_toEndOf="@+id/tv_show_mileage"
        app:layout_constraintTop_toTopOf="@+id/tv_show_mileage"/>

    <ImageView
        android:id="@+id/iv_show_in_map"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_show_in_map"
        app:layout_constraintStart_toStartOf="@+id/tv_show_in_map"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_on"/>

    <TextView
        android:id="@+id/tv_show_in_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/string_show_in_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_show_in_map"/>

</android.support.constraint.ConstraintLayout>