<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/tv_show_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_show_latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_latlng"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_latitude"
        app:layout_constraintStart_toEndOf="@+id/tv_show_latitude"
        app:layout_constraintTop_toTopOf="@+id/tv_show_latitude"/>

    <TextView
        android:id="@+id/tv_show_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_show_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_latitude"/>

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_latlng"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_longitude"
        app:layout_constraintStart_toEndOf="@+id/tv_show_longitude"
        app:layout_constraintTop_toTopOf="@+id/tv_show_longitude"/>

    <TextView
        android:id="@+id/tv_show_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/string_show_radius"
        app:layout_constraintBottom_toBottomOf="@+id/tv_radius"
        app:layout_constraintEnd_toStartOf="@+id/tv_radius"
        app:layout_constraintTop_toTopOf="@+id/tv_radius"/>

    <TextView
        android:id="@+id/tv_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_radius_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>